--- a/source/_posts/20210221-yuetang.md
+++ b/source/_posts/20210221-yuetang.md
@@ -3,5 +3,6 @@ title: 仪征市2021年月塘镇新春网络招聘会岗位信息一览表
 date: 2021-02-21 12:06:53
 tags:
 ---
-
-{% asset_img 01.png 2021-02-21月塘招聘企业汇总 %}
+<div style="width: 1200px; height: auto;">
+    {% asset_img 01.png 2021-02-21月塘招聘企业汇总 %}
+</div>
