--- a/source/_posts/20210223yzzp.md
+++ b/source/_posts/20210223yzzp.md
@@ -4,5 +4,7 @@ date: 2021-02-23 15:07:15
 tags:
 ---
 
+<div style="width: 1200px;">
+    <img src="/2021/02/23/20210223yzzp/01.png">
+</div>
 
-<img src="/2021/02/23/20210223yzzp/01.png" style="width: 1000px">
