--- a/source/_posts/20210221-yuetang.md
+++ b/source/_posts/20210221-yuetang.md
@@ -1,8 +1,8 @@
 ---
-title: 仪征市2021年月塘镇新春网络招聘会岗位信息一览表														
+title: 2021年2月21日仪征月塘镇招聘会														
 date: 2021-02-21 12:06:53
 tags:
 ---
-<div style="width: 1200px; height: auto; margin-left: -10px;">
+<div style="width: 1200px; height: auto; margin-left: -100px;">
     {% asset_img 01.png 2021-02-21月塘招聘企业汇总 %}
 </div>
