--- a/source/_posts/20210223yzzp.md
+++ b/source/_posts/20210223yzzp.md
@@ -1,10 +1,10 @@
 ---
-title: 20210223yzzp
+title: 2021年2月23日仪征招聘会
 date: 2021-02-23 15:07:15
 tags:
 ---
 
-<div style="width: 1200px;">
+<div style="width: 1200px; margin-left: -100px;">
     <img src="/2021/02/23/20210223yzzp/01.png">
 </div>
 
