--- a/source/_posts/20210310js.md
+++ b/source/_posts/20210310js.md
@@ -8,6 +8,7 @@ tags:
 2、将形参名和变量名作为AO对象属性名，属性值为undefined
 3、实参形参相统一
 4、将函数名作为AO对象属性名，属性值为函数体
+# 案例1
 ~~~js
 function fn(a) {
     console.log(a); // function a() {}
@@ -21,6 +22,7 @@ function fn(a) {
 }
 fn(1)
 ~~~
+# 案例2
 ~~~js
 function test(a, b) {
     document.write(a); // 1
@@ -35,6 +37,7 @@ function test(a, b) {
 }
 test(1);
 ~~~
+# 案例3
 ~~~js
 function test(a, b) {
     console.log(a);
@@ -50,4 +53,44 @@ function test(a, b) {
     console.log(a);
     console.log(b);
 }
+~~~
+# 案例4
+~~~js 
+a = 100;
+function demo(e) {
+    function e() {}
+    arguments[0] = 2;
+    console.log(e); // 2
+    if (a) {
+        var b = 123;
+        function c() {}
+    }
+    var c;
+    a = 10;
+    var a;
+    console.log(b); // undefined
+    f = 123;
+    console.log(c); // function c() {}
+    console.log(a); // 10
+}
+var a;
+demo(1);
+console.log(a); // 100
+console.log(f); // 123
+~~~
+# js练习题
+~~~js
+var str = false + 1;
+document.write(str); // 1
+var demo = false == 1;
+document.write(demo); // false
+// "undefined" + "NaN"
+if (typeof(a)&&-true + (+undefined) + "") {
+    document.write('基础扎实');
+}
+if (11 + "11" * 2 == 33) {
+    document.write('基础扎实');
+}
+// true + false - false
+!!" " + !!"" - !!false || document.write('你觉得能打印，就是猪');
 ~~~
